[tool.poetry]
name = "anthropic-claude-code-in-sandbox"
version = "0.1.0"
description = "E2B cookbook example"
readme = "README.md"
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
e2b = ">=2.8.0"
python-dotenv = "*"

[tool.poetry.scripts]
start = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
