[tool.poetry]
name = "e2b-autogen"
version = "0.1.0"
description = "Autogen code interpreter assistant using e2b sandbox"
authors = ["keeganmccallum <keeganmccallum3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ag2 = "^0.3.0"
e2b = "0.17.2a60"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
main = "e2b_autogen.main:main"
demo = "e2b_autogen.main:demo"
start = "e2b_autogen.main:demo"