[tool.poetry]
name = "claude-code-interpreter-python"
version = "0.1.0"
description = "Claude Code Interpreter with E2B in Python"
authors = ["E2B <hello@e2b.dev>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
e2b-code-interpreter = "^1.0.0"
anthropic = "^0.35.0"
httpx = "<0.28.0"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
