[tool.poetry]
name = "claude-code-interpreter-python"
version = "0.1.0"
description = "Claude Code Interpreter with E2B in Python"
authors = ["E2B <hello@e2b.dev>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
e2b-code-interpreter = "^2.4.1"
anthropic = "^0.75.0"
httpx = "^0.28.1"
python-dotenv = "*"

[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
