[tool.poetry]
name = "codestral-code-interpreter"
version = "0.1.0"
description = "Mistral's Codestral with code interpreting and analyzing dataset"
authors = ["tomas.beran@e2b.dev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mistralai = "^1.9.11"
e2b-code-interpreter = "^2.4.1"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
