[tool.poetry]
name = "crewai_e2b_python"
version = "0.1.0"
description = "Example project for showcasing E2B code interpreter with LangChain"
authors = ["Vasek Mlejnsky <vasek@e2b.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
e2b-code-interpreter = "0.0.11b32"
python-dotenv = "^1.0.1"

crewai = "^0.61.0"
crewai-tools = "^0.12.1"
pydantic = "^2.9.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "crewai_e2b_python.main:main"
