[tool.poetry]
name = "crewai_e2b_python"
version = "0.1.0"
description = "Example project for showcasing E2B code interpreter with LangChain"
authors = ["Vasek Mlejnsky <vasek@e2b.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
e2b-code-interpreter = "1.0.5"
python-dotenv = "1.0.1"

crewai = "0.105.0"
pydantic = "2.10.6"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "crewai_e2b_python.main:main"
