[tool.poetry]
name = "langchain_e2b_python"
version = "0.1.0"
description = "Example project for showcasing E2B code interpreter with LangChain"
authors = ["Vasek Mlejnsky <vasek@e2b.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
e2b-code-interpreter = "^2.4.1"
langchain = "^1.2.6"
python-dotenv = "^1.2.1"
langchain-openai = "^1.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "langchain_e2b_python.main:main"
