[tool.poetry]
name = "ai-ai_github_developer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "ai_github_developer" }]

[tool.poetry.dependencies]
python = "^3.10"
e2b = "^0.13.7"
python-dotenv = "^1.0.0"
openai = "^1.2.4"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "ai_github_developer.main:main"
create-ai-assistant = "ai_github_developer.assistant:create_assistant"
