[tool]
[tool.poetry]
name = "e2b-lamma-index"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
llama-index = "^0.9.19"
python-dotenv = "^1.0.0"
e2b = "^0.13.15"
supabase = "^2.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"